deployments/dev/authorization-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authorization
spec:
  ports:
    - protocol: TCP
      targetPort: 8080
      port: 8000
  selector:
    app: authorization
