deployments/dev/authorization-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: authorization-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: api.dev.pepenulimited.com
      http:
        paths:
          - backend:
              serviceName: authorization
              servicePort: 80
            path: /sign-in
